# iceoryx-automotive-soa

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml
include/owl/kom/: field_publisher.hpp  field_publisher.inl  field_subscriber.inl  method_server.hpp
src/: minimal_skeleton.cpp
src/owl/kom/: method_client.cpp  method_server.cpp
test/: test_automotive_soa_binding.py
